--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: 1fr;
     height: 95vh;
-    grid-template-rows: 150px 20% 4fr 100px;
+    grid-template-rows: 160px 20% 4fr 100px;
     grid-template-areas:
         "header"
         "hero"
@@ -58,7 +58,8 @@
     grid-template-rows: 50px 100px;
     grid-template-areas:
         "brand brand"
-        "nav tools"
+        "nav tools";
+    margin-top: 10px;
 }
 
 .header-inner-container .brand {
@@ -81,16 +82,6 @@
     line-height: 25px;
     border-radius: 4px;
 }
-
-/* .header-inner-container .nav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.header-inner-container .nav a.active {
-    background-color: dodgerblue;
-    color: white;
-  } */
 
 .header-inner-container .tools {
     grid-area: tools;
@@ -121,7 +112,7 @@
 .body-inner-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 20% 20% 60%;
+    grid-template-rows: 20% 1fr 1fr;
     grid-template-areas:
        "art-feat"
        "body-ad"
@@ -130,7 +121,6 @@
 
 .article-feature {
     grid-area: art-feat;
-    background-color: seagreen;
 }
 
 .body-ad {
@@ -139,10 +129,16 @@
     position: relative;
 }
 
+.body-ad img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .body-ad button {
     position: absolute;
     top: 50%;
-    left: 35%;
+    left: 40%;
 }
 
 
@@ -170,9 +166,13 @@
         grid-area: sidebar;
     }
 
+    .side-bar-container li {
+        list-style-type: none;
+    }
+
     .outer-container {
         grid-template-columns: 100px 1fr 100px;
-        grid-template-rows: 150px 1fr 2fr 1fr 100px;
+        grid-template-rows: 150px 1fr 2fr fr 100px;
         grid-template-areas:
         "header header header"
         "hero hero hero"
@@ -207,10 +207,14 @@
     .body-inner-container {
         display: grid;
         grid-template-columns: 3fr 1fr;
-        grid-template-rows: 1fr 3fr;
+        grid-template-rows: 1fr 1fr;
         grid-template-areas:
            "art-feat body-ad"
            "art-list art-list";
+    }
+
+    .article-feature {
+        align-self: center;
     }
    
 }
@@ -218,7 +222,7 @@
 @media (min-width: 992px) {
     .outer-container {
         grid-template-columns: 100px 1fr 100px;
-        grid-template-rows: 100px 278px 338px 3fr 100px;
+        grid-template-rows: 100px 1fr 338px 3fr 100px;
         grid-template-areas:
         "header header header"
         "hero hero ad"
@@ -238,7 +242,7 @@
 
     .hero-inner {
         grid-template-columns: 6fr 3fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: 100px;
         grid-template-areas:
            "hero-feature cta";
     }
@@ -249,10 +253,9 @@
     }
 
     .ad-container img {
-        height: 80%;
+        height: 85%;
         width: 100%;
     }
-
 
     .body-ad {
         display: none;
@@ -265,4 +268,10 @@
         grid-template-areas:
            "art-feat art-list";
     }
+
+    #sidebar ul {
+        padding-left: 0;
+        margin-top: 1em;
+    }
+
 }
