--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,21 @@
 .outer-container {
     display: grid;
     grid-template-columns: 1fr;
-    height: 95vh;
-    grid-template-rows: 160px 20% 4fr 100px;
+    grid-template-rows: 0.1fr 0.5fr 1fr 60px;
     grid-template-areas:
         "header"
         "hero"
         "body"
         "footer";
     text-align: center;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    width: 100%;
 }
 
 .header-container {
     grid-area: header;
     background-color: #EDC7B7;
-;
 }
 
 .hero-container {
@@ -34,7 +35,7 @@
 
 .body-container {
     grid-area: body;
-    background-color: #BAB2B5;
+    background-color: #8b5db9
 }
 
 .ad-container {
@@ -55,57 +56,91 @@
 .header-inner-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 100px;
+    grid-template-rows: 70px 1fr;
     grid-template-areas:
         "brand brand"
         "nav tools";
-    margin-top: 10px;
+    margin-top: 2px;
 }
 
 .header-inner-container .brand {
     grid-area: brand;
     justify-self: center;
     align-self: center;
+    font-weight: 900;
+
 }
 
 .header-inner-container .nav  {
     grid-area: nav;
-    justify-self: center;
-    align-self: center;
+    /* justify-self: center;
+    align-self: center; */
 }
-.header-inner-container .nav a {
-    float: left;
-    color: black;
-    padding: 5px;
+
+.menu-content {
+    max-height: 0;
+    overflow: hidden;
+    font-family: 'Coda', cursive;
+    padding: 0 0 0 50px;
+}
+.collapsible-menu {
+    padding: 0px 30px;
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+}
+
+.collapsible-menu a {
+    display:block;
+    padding: 10px;
     text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
-    border-radius: 4px;
+}
+
+.collapsible-menu label {
+    font-family:  'Coda', cursive;
+    font-size: 30px;
+    display: block;
+    cursor: pointer;
+    background: url(/images/add_aplis.png) no-repeat left center;
+    padding: 10px 0 10px 70px;
+}
+
+input#menu {
+    display: none;
+}
+
+input:checked +label {
+    background-image: url(/images/close_aplis.png);
+}
+
+input:checked ~ .menu-content {
+    max-height: 100%;
 }
 
 .header-inner-container .tools {
     grid-area: tools;
-    justify-self: center;
-    align-self: center;
+   align-self: flex-start;
 }
 
-.hero-inner {
+.hero-container .hero-inner {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 140px;
+    grid-template-rows: 100%;
     grid-template-areas:
        "cta";
+    width: 100vw;
+    height: 80vh;
+    background-image: url(/images/carry.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-.hero-feature {
+.hero-inner .hero-feature {
     display: none;
-    justify-self: center;
-    align-self: center;
 }
 
-.hero-cta {
-    grid-area:cta;
-    justify-self: center;
+.hero-inner .hero-cta {
+    grid-area: cta;
     align-self: center;
 }
 
@@ -121,6 +156,9 @@
 
 .article-feature {
     grid-area: art-feat;
+    font-family: 'Coda', cursive;
+    text-align: justify;
+    margin: 30px;
 }
 
 .body-ad {
@@ -135,7 +173,7 @@
     height: 100%;
 }
 
-.body-ad button {
+.body-ad .button {
     position: absolute;
     top: 50%;
     left: 40%;
@@ -146,6 +184,10 @@
     grid-area: art-list;
     text-align: justify;
     padding: 10px;
+}
+
+.article-listing {
+    background-color: #8ebd5f;
 }
 
 .side-bar-container {
@@ -161,18 +203,9 @@
 
 @media (min-width: 576px) {
     
-    .side-bar-container {
-        display: block;
-        grid-area: sidebar;
-    }
-
-    .side-bar-container li {
-        list-style-type: none;
-    }
-
     .outer-container {
-        grid-template-columns: 100px 1fr 100px;
-        grid-template-rows: 150px 1fr 2fr 1fr 100px;
+        grid-template-columns: 3fr 6fr 3fr;
+        grid-template-rows: 0.05fr 0.8fr 0.8fr 0.1fr 60px;
         grid-template-areas:
         "header header header"
         "hero hero hero"
@@ -185,9 +218,15 @@
     .header-inner-container {
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 100px;
+        grid-template-rows: 0.2fr;
         grid-template-areas:
-            "brand nav tools"
+            "brand nav tools";
+        margin-top: 10px;
+        grid-gap: 2px;
+    }
+
+    .header-inner-container .brand, .header-inner-container .tools {
+        align-self: flex-start;
     }
 
     .hero-inner {
@@ -216,17 +255,47 @@
     .article-feature {
         align-self: center;
     }
+
+    .article-listing {
+        background-color: #8ebd5f;
+    }
+
+    .body-ad img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .side-bar-container {
+        display: block;
+        grid-area: sidebar;
+        background-color: yellow;
+    }
+
+    .side-bar-feature {
+        display: flex;
+        justify-content: flex-start;
+        margin-left: 10px;
+    }
+
+    .side-bar-container li {
+        display: flex;
+        list-style-type: none;
+    }
+
+    #footer {
+        margin-top:2%;
+    }
    
 }
 
 @media (min-width: 992px) {
     .outer-container {
-        grid-template-columns: 100px 1fr 100px;
-        grid-template-rows: 100px 1fr 338px 3fr 100px;
+        grid-template-columns: 2fr 7fr 3fr;
+        grid-template-rows: 0.2fr 0.8fr 0.5fr 60px;
         grid-template-areas:
         "header header header"
         "hero hero ad"
-        "body body sidebar"
         "body body sidebar"
         "footer footer footer";
 
@@ -235,7 +304,7 @@
     .header-inner-container {
         display: grid;
         grid-template-columns: 2fr 7fr 3fr;
-        grid-template-rows: 100px;
+        grid-template-rows: 1fr;
         grid-template-areas:
             "brand nav tools"
     }
@@ -248,13 +317,21 @@
     }
 
     .ad-container {
-        display: block;
         grid-area: ad;
+        display: flex;
+        position: relative;
     }
 
     .ad-container img {
-        height: 85%;
+        position: absolute;
         width: 100%;
+        height: 100%;
+    }
+
+    .ad-container .button {
+        position: absolute;
+        top: 50%;
+        left: 40%;
     }
 
     .body-ad {
@@ -269,9 +346,15 @@
            "art-feat art-list";
     }
 
-    #sidebar ul {
-        padding-left: 0;
-        margin-top: 1em;
+    .side-bar-feature {
+        display: block;
+        justify-content: center;
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+
+    #footer {
+        margin-top:1%;
     }
 
 }
