changing back to lower letters file extenstion for images

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@
     font-size: 30px;
     display: block;
     cursor: pointer;
-    background: url(/images/add_aplis.PNG) no-repeat left center;
+    background: url(/images/add_aplis.png) no-repeat left center;
     padding: 10px 0 10px 70px;
 }
 
@@ -108,7 +108,7 @@ input#menu {
 }
 
 input:checked +label {
-    background-image: url(/images/close_aplis.PNG);
+    background-image: url(/images/close_aplis.png);
 }
 
 input:checked ~ .menu-content {
