--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@ input:checked ~ .menu-content {
        "cta";
     width: 100vw;
     height: 80vh;
-    background-image: url(/images/carry.JPG);
+    background-image: url(/images/carry.jgp);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
