--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,7 @@ input:checked ~ .menu-content {
        "cta";
     width: 100vw;
     height: 80vh;
-    background-image: url(/images/carry.jgp);
+    background-image: url(https://images.unsplash.com/photo-1494914656837-44eb36fe5471?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
