fixed menu icon positioning

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@
     font-size: 30px;
     display: block;
     cursor: pointer;
-    background: url(../images/add_aplis.png) no-repeat left center;
+    background: url(../images/add_aplis.png) no-repeat left top;
     padding: 10px 0 10px 70px;
 }
 
